--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,8 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="/style.css">
-    <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
-    <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">  <meta charset="utf-8">
     <title>Title</title>
   </head>
   <body>
