--- a/views/result.erb
+++ b/views/result.erb
@@ -1,3 +1,5 @@
-<h1> Thank you for playing today </h1>
+<h2> Thank you for playing today </h2> <br>
 
-<h2> The winner is <%= @game_result %> </h2>
+<h2> The winner is [drumroll please] </h2> <br>
+
+<h1> <%= @game_result %> </h1>
