added home page and tryign to link it

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -2,10 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/style_home.css">
     <link href="https://fonts.googleapis.com/css?family=Exo" rel="stylesheet">  <meta charset="utf-8">
     <title>Title</title>
   </head>
   <body>
+    <nav>
+      <li><a href="/">home</a></li>
+    </nav>
     <%= yield %>
   </body>
 </html>
