--- a/views/home.erb
+++ b/views/home.erb
@@ -1,7 +1,8 @@
-<h1> Welcome to the snakes and ladders game </h1>
 
-<h2> Rules of the game </h2>
+<h1> Welcome to the snakes and ladders game </h1> <br>
 
-<p> Rock, Paper, Scissors (aka "Ro-Sham-Bo", janken, "Bato, Bato, Pick" and "Scissors, Paper, Stone") is a simple hand game that is played around the world, with many different names and variations. It is commonly used as a way of coming to decisions, and in some cases is even played for sport. The rules require that competing players use one hand to form one of three shapes at an agreed-upon time. The person that plays the strongest “object” is the winner of the game. It's that easy! Rock Paper Scissors is a simple game that anybody can play and win. There is no obvious advantage to the stronger, older, more experienced opponent</p>
+<h2> Rules of the game </h2> <br>
 
-<h1>  <a href= "/game_winner" > Play </a>  </h1>
+<p> Rock, Paper, Scissors (aka "Ro-Sham-Bo", janken, "Bato, Bato, Pick" and "Scissors, Paper, Stone") is a simple hand game that is played around the world, with many different names and variations. It is commonly used as a way of coming to decisions, and in some cases is even played for sport. The rules require that competing players use one hand to form one of three shapes at an agreed-upon time. The person that plays the strongest “object” is the winner of the game. It's that easy! Rock Paper Scissors is a simple game that anybody can play and win. There is no obvious advantage to the stronger, older, more experienced opponent</p> <br>
+
+<h1>  <a href= "/game_winner/rock/rock" > Play </a>  </h1>
