--- a/views/result.erb
+++ b/views/result.erb
@@ -2,4 +2,6 @@
 
 <h2> The winner is [drumroll please] </h2> <br>
 
-<h1> <%= @game_result %> </h1>
+<h1> <%= @game_result %> </h1> <br>
+
+<p> <a href="/home">Read Rules</a> </p>
